tests/neg-custom-args/captures/linear-buffer.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/linear-buffer.scala:7:29 ---------------------------------
7 |    def bar: BadBuffer[T]^ = this // error // error separation
  |                             ^^^^
  |                  Found:    BadBuffer[T]^{BadBuffer.this.rd}
  |                  Required: BadBuffer[T]^{any}
  |
  |                  Note that {any} is an exclusive capture set of the stateful type BadBuffer[T]^{any},
  |                  it cannot subsume a read-only capture set of the stateful type BadBuffer[T]^{BadBuffer.this.rd}.
  |
  |                  where:    any is a root capability classified as Unscoped in the result type of method bar
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:5:27 ------------------------------------------------------
5 |  update def append(x: T): BadBuffer[T]^ = this // error
  |                           ^^^^^^^^^^^^^
  |      Separation failure: method append's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
  |      The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:7:13 ------------------------------------------------------
7 |    def bar: BadBuffer[T]^ = this // error // error separation
  |             ^^^^^^^^^^^^^
  |         Separation failure: method bar's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
  |         The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:10:29 -----------------------------------------------------
10 |    def bar: BadBuffer[T]^ = this // error // error
   |                             ^^^^
   |              Separation failure: Illegal access to {BadBuffer.this} which is hidden by the previous definition
   |              of method append with result type BadBuffer[T]^.
   |              This type hides capabilities  {BadBuffer.this}
   |
   |              where:    ^ refers to a root capability classified as Unscoped in the result type of method append
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:10:13 -----------------------------------------------------
10 |    def bar: BadBuffer[T]^ = this // error // error
   |             ^^^^^^^^^^^^^
   |       Separation failure: method bar's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
   |       The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:23:17 -----------------------------------------------------
23 |  val buf3 = app(buf, 3) // error
   |                 ^^^
   |Separation failure: Illegal access to (buf : Buffer[Int]^), which was passed as a consume parameter to method app
   |on line 21 and therefore is no longer available.
   |
   |where:    ^ refers to a root capability classified as Unscoped in the type of parameter buf
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:30:17 -----------------------------------------------------
30 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed as a consume parameter to method app
   |on line 28 and therefore is no longer available.
   |
   |where:    ^ refers to a root capability classified as Unscoped in the type of value buf1
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:38:17 -----------------------------------------------------
38 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed as a consume parameter to method app
   |on line 35 and therefore is no longer available.
   |
   |where:    ^ refers to a root capability classified as Unscoped in the type of value buf1
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:48:17 -----------------------------------------------------
48 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed as a consume parameter to method app
   |on line 43 and therefore is no longer available.
   |
   |where:    ^ refers to a root capability classified as Unscoped in the type of value buf1
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:52:8 ------------------------------------------------------
52 |    app(buf, 1)  // error
   |        ^^^
   |        Separation failure: (buf : Buffer[Int]^) appears in a loop, therefore it cannot
   |        be passed as a consume parameter to method app.
   |
   |        where:    ^ refers to a root capability classified as Unscoped in the type of parameter buf
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:62:20 -----------------------------------------------------
62 |  val c3 = contents(buf)  // error
   |                    ^^^
   |             Separation failure: Illegal access to buf.rd, which was passed as a consume parameter to method app
   |             on line 59 and therefore is no longer available.
